--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "rollup": "^4.50.2",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.5"
   }
