--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+  "prepare": "esbuild install",
+  "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --port 5173"
   },
