--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-  "prepare": "esbuild install",
-  "build": "vite build",
+    "prepare": "esbuild install",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --port 5173"
   },
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "esbuild": "^0.17.20",
     "postcss": "^8.5.6",
-    "rollup": "^4.50.2",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.5"
   }
